[gd_scene load_steps=16 format=1]

[ext_resource path="res://scripts/Ferramentas/game.gd" type="Script" id=1]
[ext_resource path="res://assets/screen_controls/flatDark/flatDark20.png" type="Texture" id=2]
[ext_resource path="res://assets/Ferramentas/OAI33B0.jpg" type="Texture" id=3]
[ext_resource path="res://scripts/Ferramentas/inputproc.gd" type="Script" id=4]
[ext_resource path="res://assets/Fontes/font150.fnt" type="BitmapFont" id=5]
[ext_resource path="res://assets/Fontes/font32.fnt" type="BitmapFont" id=6]
[ext_resource path="res://assets/Ferramentas/wrong.png" type="Texture" id=7]

[sub_resource type="StyleBoxFlat" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.376099, 0.5, 0.103516, 1 )
light_color = Color( 0.875, 0.0307617, 0.0307617, 1 )
dark_color = Color( 0.761719, 0.0952148, 0.0952148, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="StyleBoxFlat" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0, 0, 0, 1 )
light_color = Color( 0, 0, 0, 1 )
dark_color = Color( 0, 0, 0, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="StyleBoxFlat" id=3]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.615686, 0.615686, 0.615686, 0.941176 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="StyleBoxFlat" id=5]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.615686, 0.615686, 0.615686, 0.941176 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="RectangleShape2D" id=6]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="Animation" id=7]

resource/name = "lose"
length = 2.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("lose:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 1 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("lose:rect/scale")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 1, 2 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=8]

resource/name = "won"
length = 2.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("won:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 1 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("won:rect/scale")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 1, 2 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 1 ) ]
}

[node name="game" type="Node2D"]

script/script = ExtResource( 1 )

[node name="gotomap" type="TouchScreenButton" parent="."]

transform/pos = Vector2( 740.621, 30.9894 )
z/z = 2
normal = ExtResource( 2 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="background" type="Sprite" parent="."]

texture = ExtResource( 3 )
centered = false
region = true
region_rect = Rect2( 0, 0, 1000, 1300 )
__meta__ = {
"_edit_lock_": true
}

[node name="fruits" type="Node2D" parent="."]

z/z = 1

[node name="Generator" type="Timer" parent="."]

process_mode = 1
wait_time = 1.5
one_shot = false
autostart = true

[node name="inputproc" type="Node2D" parent="."]

transform/pos = Vector2( 0, -0.32354 )
script/script = ExtResource( 4 )

[node name="interrequest" type="Timer" parent="inputproc"]

process_mode = 1
wait_time = 0.1
one_shot = false
autostart = false

[node name="limit" type="Timer" parent="inputproc"]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false

[node name="control" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="label" type="Label" parent="control"]

rect/scale = Vector2( 0.2, 0.2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 148.0
margin/top = 27.0
margin/right = 1148.0
margin/bottom = 140.0
custom_fonts/font = ExtResource( 5 )
text = "progresso"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="progressbar" type="ProgressBar" parent="control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 27.0
margin/top = 51.0
margin/right = 481.0
margin/bottom = 85.0
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
percent/visible = true

[node name="error1" type="TextureFrame" parent="control"]

rect/rotation = 90.0
rect/scale = Vector2( 0.1, 0.1 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 500.0
margin/top = 90.0
margin/right = 1319.0
margin/bottom = 710.0
texture = ExtResource( 7 )
stretch_mode = 0

[node name="error2" type="TextureFrame" parent="control"]

rect/rotation = 90.0
rect/scale = Vector2( 0.1, 0.1 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 581.9
margin/top = 90.0
margin/right = 1400.9
margin/bottom = 710.0
texture = ExtResource( 7 )
stretch_mode = 0

[node name="error3" type="TextureFrame" parent="control"]

rect/rotation = 90.0
rect/scale = Vector2( 0.1, 0.1 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 663.8
margin/top = 90.0
margin/right = 1482.8
margin/bottom = 710.0
texture = ExtResource( 7 )
stretch_mode = 0

[node name="end" type="Node2D" parent="."]

transform/pos = Vector2( 0, 538 )
z/z = 5

[node name="lose" type="Panel" parent="end"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 25.0
margin/top = -300.0
margin/right = 775.0
margin/bottom = 400.0
custom_styles/panel = SubResource( 3 )

[node name="reason_label" type="Label" parent="end/lose"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 1500.0
margin/bottom = 690.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Você não selecionou bem as ferramentas"
align = 1
valign = 2
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="playagain_label" type="Label" parent="end/lose"]

rect/scale = Vector2( 0.4, 0.4 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 345.0
margin/right = 1875.0
margin/bottom = 495.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "jogar novamente"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="playagain" type="TouchScreenButton" parent="end/lose"]

transform/pos = Vector2( 390, 370 )
transform/rot = 180.0
transform/scale = Vector2( 36, 3 )
normal = null
pressed = null
bitmask = null
shape = SubResource( 4 )
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="won" type="Panel" parent="end"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 25.0
margin/top = -300.0
margin/right = 775.0
margin/bottom = 400.0
custom_styles/panel = SubResource( 5 )

[node name="won_label" type="Label" parent="end/won"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 1500.0
margin/bottom = 690.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.156863, 0.631373, 0.156863, 1 )
text = "Você selecionou bem as ferramentas!"
align = 1
valign = 2
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="backtoplanet_label" type="Label" parent="end/won"]

rect/scale = Vector2( 0.4, 0.4 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 345.0
margin/right = 1875.0
margin/bottom = 495.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Voltar ao mapa"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="backtoplanet" type="TouchScreenButton" parent="end/won"]

transform/pos = Vector2( 355, 370 )
transform/scale = Vector2( 33, 3 )
normal = null
pressed = null
bitmask = null
shape = SubResource( 6 )
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="end_anim" type="AnimationPlayer" parent="end"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/lose = SubResource( 7 )
anims/won = SubResource( 8 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[connection signal="pressed" from="gotomap" to="." method="_on_gotomap_pressed"]

[connection signal="timeout" from="Generator" to="." method="_on_Generator_timeout"]

[connection signal="timeout" from="inputproc/interrequest" to="inputproc" method="_on_interrequest_timeout"]

[connection signal="timeout" from="inputproc/limit" to="inputproc" method="_on_limit_timeout"]

[connection signal="pressed" from="end/lose/playagain" to="." method="_on_playagain_pressed"]

[connection signal="pressed" from="end/won/backtoplanet" to="." method="_on_backtoplanet_pressed"]


